[package]
name = "anderson"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["EvalOps"]
license = "MIT OR Apache-2.0"
description = "A minimal LLM-agent harness built on the reference-monitor principles from James P. Anderson's 1972 Computer Security Technology Planning Study."
repository = "https://github.com/evalops/anderson"
homepage = "https://github.com/evalops/anderson"
readme = "README.md"
keywords = ["agent", "llm", "security", "sandbox", "reference-monitor"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "anderson"
path = "src/lib.rs"

[[bin]]
name = "anderson"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-util"] }
async-trait = "0.1"
async-openai = "0.27"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
